web/app/navbar.module.css
.nav {
  padding: 1rem;
  font-size: large;
  width: 100%;
  display: flex;
  justify-content: center;
}

.list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 0;
  padding: 0;
  margin: 0;
  width: auto;
  max-width: 100%;
}

.item {
  list-style-type: none;
  display: flex;
  align-items: center;
  margin: 0;
}

.link {
  border: white solid 1px;
  padding-inline: 1rem;
  display: flex;
  align-items: center;
  height: 100%;
}

.link:hover {
  background-color: var(--konbini-red);
  color: var(--konbini-yellow);
}

.videoLink {
  display: flex;
  align-items: center;
}
.videoLink > * {
  margin-inline: 0.2em;
}

.videoLink > div {
  position: relative;
  top: 0.07em;
}

.currentLink {
  background-color: var(--konbini-red);
  color: var(--konbini-yellow);
}

.searchItem {
  height: 100%;
}

.searchBarWrapper {
  align-items: center;
  height: 100%;
}

@media screen and (max-width: 420px) {
  .list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0;
    width: 100%;
  }

  .item {
    display: flex;
    width: 100%;
  }

  .link {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 0.75rem 1rem;
  }

  .searchItem {
    width: 100%;
    height: auto;
  }

  .searchBarWrapper {
    width: 100%;
  }
}

@media screen and (min-width: 414px) {
  .item {
    height: 2.5em;
  }
}

